login hashing fixed, login & signup

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -21,13 +21,13 @@
                     <form method="post">
                         <div class="mb-3">
                             <label for="inputEmail" class="form-label">Email</label>
-                            <input type="email" value="{{ last_username }}" name="email" id="inputEmail"
+                            <input type="email" value="{{ last_username }}" name="_username" id="inputEmail"
                                    class="form-control" autocomplete="email" required autofocus>
                         </div>
 
                         <div class="mb-3">
                             <label for="inputPassword" class="form-label">Password</label>
-                            <input type="password" name="password" id="inputPassword"
+                            <input type="password" name="_password" id="inputPassword"
                                    class="form-control" autocomplete="current-password" required>
                         </div>
 
