--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,7 +13,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container">
-        <a class="navbar-brand fw-bold" > {# href="{{ path('app_home') }}" #}
+        <a class="navbar-brand fw-bold" href="{{ path('app_dashboard') }}">
             <i class="bi bi-mortarboard-fill me-2"></i>Pathway+
         </a>
 
@@ -24,7 +24,7 @@
                         <i class="bi bi-person-circle me-1"></i>{{ app.user.fullName }}
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" > {# href="{{ path('app_dashboard') }}" #}
+                        <li><a class="dropdown-item" href="{{ path('app_dashboard') }}"  >
                                 <i class="bi bi-speedometer2 me-2"></i>Dashboard
                             </a></li>
                         <li><a class="dropdown-item" > {# href="{{ path('app_profile') }}" #}
@@ -37,7 +37,7 @@
                                 </a></li>
                         {% endif %}
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" > {# href="{{ path('app_logout') }}" #}
+                        <li><a class="dropdown-item" href="{{ path('app_logout') }}">
                                 <i class="bi bi-box-arrow-right me-2"></i>Logout
                             </a></li>
                     </ul>
