feat: dashboardController setup

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,12 +27,12 @@
                         <li><a class="dropdown-item" href="{{ path('app_dashboard') }}"  >
                                 <i class="bi bi-speedometer2 me-2"></i>Dashboard
                             </a></li>
-                        <li><a class="dropdown-item" > {# href="{{ path('app_profile') }}" #}
+                        <li><a class="dropdown-item" href="{{ path('app_profile') }}">
                                 <i class="bi bi-person me-2"></i>Profile
                             </a></li>
                         {% if is_granted('ROLE_ADMIN') %}
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" > {# href="{{ path('admin_dashboard') }}" #}
+                            <li><a class="dropdown-item" href="{{ path('admin_dashboard') }}">
                                     <i class="bi bi-gear me-2"></i>Admin Panel
                                 </a></li>
                         {% endif %}
