--- a/templates/admin/skill/skill.html.twig
+++ b/templates/admin/skill/skill.html.twig
@@ -119,7 +119,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-4">
                             <small class="text-muted">
-                                Showing {{ ((currentPage - 1) * itemsPerPage + 1) }} to {{ min(currentPage * itemsPerPage, totalItems) }} of {{ totalItems }} skill{{ totalItems != 1 ? 's' : '' }}
+                                Showing {{ skills|length }} of {{ totalItems }} Skills
                             </small>
                         </div>
                         <div class="col-lg-4 text-center">
@@ -139,7 +139,7 @@
 
                                         {% if startPage > 1 %}
                                             <li class="page-item">
-                                                <a class="page-link" href="{{ path('app_admin_skill_index', {'page': 1}) }}">1</a>
+                                                <a class="page-link" href="{{ path('app_admin_skill', {'page': 1}) }}">1</a>
                                             </li>
                                             {% if startPage > 2 %}
                                                 <li class="page-item disabled">
