--- a/templates/admin/skill/skill.html.twig
+++ b/templates/admin/skill/skill.html.twig
@@ -128,7 +128,7 @@
                                     <ul class="pagination pagination-sm justify-content-center mb-0">
                                         <!-- Previous Button -->
                                         <li class="page-item {{ currentPage <= 1 ? 'disabled' : '' }}">
-                                            <a class="page-link" href="{{ currentPage > 1 ? path('app_admin_skill', {'page': currentPage - 1}) : '#' }}" aria-label="Previous">
+                                            <a class="page-link" href="{{ currentPage > 1 ? path('app_admin_skill_index', {'page': currentPage - 1}) : '#' }}" aria-label="Previous">
                                                 <i class="bi bi-chevron-left"></i>
                                             </a>
                                         </li>
@@ -139,7 +139,7 @@
 
                                         {% if startPage > 1 %}
                                             <li class="page-item">
-                                                <a class="page-link" href="{{ path('app_admin_skill', {'page': 1}) }}">1</a>
+                                                <a class="page-link" href="{{ path('app_admin_skill_index', {'page': 1}) }}">1</a>
                                             </li>
                                             {% if startPage > 2 %}
                                                 <li class="page-item disabled">
@@ -153,7 +153,7 @@
                                                 {% if page == currentPage %}
                                                     <span class="page-link">{{ page }}</span>
                                                 {% else %}
-                                                    <a class="page-link" href="{{ path('app_admin_skill', {'page': page}) }}">{{ page }}</a>
+                                                    <a class="page-link" href="{{ path('app_admin_skill_index', {'page': page}) }}">{{ page }}</a>
                                                 {% endif %}
                                             </li>
                                         {% endfor %}
@@ -171,7 +171,7 @@
 
                                         <!-- Next Button -->
                                         <li class="page-item {{ currentPage >= totalPages ? 'disabled' : '' }}">
-                                            <a class="page-link" href="{{ currentPage < totalPages ? path('app_admin_skill', {'page': currentPage + 1}) : '#' }}" aria-label="Next">
+                                            <a class="page-link" href="{{ currentPage < totalPages ? path('app_admin_skill_index', {'page': currentPage + 1}) : '#' }}" aria-label="Next">
                                                 <i class="bi bi-chevron-right"></i>
                                             </a>
                                         </li>
