--- a/templates/admin/skill/skillForm.html.twig
+++ b/templates/admin/skill/skillForm.html.twig
@@ -87,7 +87,7 @@
 
                     {# Submit Button #}
                     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                        <a href="{{ path('app_admin_skill') }}" class="btn btn-outline-secondary me-md-2">
+                        <a href="{{ path('app_admin_skill_index') }}" class="btn btn-outline-secondary me-md-2">
                             <i class="fas fa-times me-1"></i>
                             Cancel
                         </a>
